k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redditguessr-service
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: redditguessr
  type: ClusterIP
